--- a/style/main.scss
+++ b/style/main.scss
@@ -6,7 +6,18 @@ body {
   border-radius: 50%;
   width: 400px;
   height: 400px;
-  display: block;
   margin: 100px auto;
   border: 4px solid black;
+  position: relative;
+
+  .hour {
+    position: absolute;
+    height: 2px;
+    width: 190px;
+    background-color: red;
+    right: 50%;
+    top: 50%;
+    margin-top: -1px;
+  }
 }
+
